z-index fix for button

--- a/core/jazz_ui/src/app/pages/service-overview/service-overview.component.scss
+++ b/core/jazz_ui/src/app/pages/service-overview/service-overview.component.scss
@@ -1320,9 +1320,6 @@ details {
 }
 
 .down-btn-wrap {
-  z-index: 1;
-  bottom: -1rem;
-  right: -2rem;
   font-size: 13px;
 
   btn-jazz-primary,
